--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,32 @@
 <resources>
     <string name="app_name">Projectx</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+        <string name="navigation_drawer_open">Abrir</string>
+    <string name="navigation_drawer_close">Cerrar</string>
+    <string name="nav_header_title">Bussines</string>
+    <string name="nav_header_subtitle">androd</string>
+    <string name="nav_header_desc">Bussines</string>
+    <string name="action_settings">Configuracion</string>
+    <string name="menu_quienes_somos">Quienes somos</string>
+    <string name="menu_servicios">Servicios</string>
+    <string name="menu_partners">Partners</string>
+    <string name="menu_noticias">Noticias</string>
+    <string name="menu_perfil">perfil</string>
+    <string name="menu_faq">FAQ</string>
+    <string name="menu_contactanos">Contactanos</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_home">Inicio</string>
+    <string name="menu_gallery">Noticias</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_historia">historia</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome!"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Ingresar o registrar</string>
+    <string name="action_sign_in_short">Ingresar</string>
+    <string name="welcome">"Bienvenido"</string>
+    <string name="invalid_username">No es un usuario valido</string>
+    <string name="invalid_password">Contraseña debe ser mayor a 5 caracteres</string>
+    <string name="login_failed">"Ingreso fallido"</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Fragmento blanco</string>
 </resources>
